--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     "publish:major": "lerna version major --conventional-commits",
     "lerna:publish": "lerna publish from-git --yes --dist-tag latest",
     "lerna:canary": "lerna publish --canary --include-merged-tags --preid ks-canary --dist-tag ks-canary --force-publish",
-    "serve": "lerna run serve --scope @sites/test-site --stream",
+    "serve": "lerna run serve --scope @sites/${APP_SITE_NAME:-test-site} --stream",
     "setup": "npm run bootstrap && npm run build:packages",
     "sites:pack": "lerna exec --no-private --stream -- npm pack",
     "sites:clone-local": "node ./scripts/sites-clone",
     "sites:install": "node ./scripts/sites-install",
     "sites:update": "npm run sites:pack && npm run sites:install",
-    "sites:launch-test": "npm run sites:clone-local test-site && npm run sites:update test-site && cd sites/test-site && npm install --legacy-peer-deps && npm run start",
-    "sites:launch-monorepo": "cd sites/test-site && npm run start",
-    "start": "lerna run start --stream --scope @sites/test-site",
+    "sites:launch-test": "npm run sites:clone-local ${APP_SITE_DIR_NAME:-test-site} && npm run sites:update ${APP_SITE_DIR_NAME:-test-site} && cd sites/${APP_SITE_DIR_NAME:-test-site} && npm install --legacy-peer-deps && npm run start",
+    "sites:launch-monorepo": "cd sites/${APP_SITE_DIR_NAME:-test-site} && npm run start",
+    "start": "lerna run start --stream --scope @sites/${APP_SITE_NAME:-test-site}",
     "sync:fix": "syncpack fix-mismatches",
     "sync:check": "syncpack list-mismatches",
     "test": "jest",
