Remove gatsby-plugin-image from site __vital__

--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -16,6 +16,7 @@
   },
   "files": [
     "/bin",
+    "cjs",
     "dist",
     "index.js",
     "index.d.ts",
@@ -40,11 +41,11 @@
     "access": "public"
   },
   "scripts": {
-    "build": "npm run copy && tsc -p ./tsconfig.json && npm run build:api-doc",
+    "build": "npm run copy && tsc -p ./tsconfig.json && tsc -p ./src/tsconfig.json && npm run build:api-doc",
     "build:watch": "npm run build -- --watch",
-    "build:api-doc": "typedoc --out doc/api src",
-    "clean": "rimraf -rf \"dist\" && rimraf index* && rimraf \"doc/api\"",
-    "copy": "copyfiles -u 1 \"./src/dist/**/*.{json,jpg,png}\" \".\""
+    "build:api-doc": "typedoc --out doc/api src --tsconfig src/tsconfig.json",
+    "clean": "rimraf -rf \"dist\" && rimraf -rf \"cjs\" && rimraf index* && rimraf \"doc/api\"",
+    "copy": "copyfiles -u 1 \"./src/dist/**/*.{json,jpg,png}\" \".\" && copyfiles -u 1 \"./src/dist/**/*.{json,jpg,png}\" \"./cjs\""
   },
   "dependencies": {
     "@bodiless/accordion": "^1.0.0-beta.11",
