--- a/sites/__vital__/.env.site
+++ b/sites/__vital__/.env.site
@@ -83,3 +83,4 @@ BODILESS_DOCS_API_ENABLED=1
 # BODILESS_DEFAULT_CONTENT_AUTO_DISCOVERY_DEPTH='1'
 
 GATSBY_TELEMETRY_DISABLED=1
+BODILESS_GATSBY_PLUGIN_IMAGE_OMIT=1
