--- a/packages/vital-templates/package.json
+++ b/packages/vital-templates/package.json
@@ -39,6 +39,7 @@
     "@bodiless/core": "^1.0.0-beta.7",
     "@bodiless/fclasses": "^1.0.0-beta.7",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.7",
+    "@bodiless/vital-content-listing": "^1.0.0-beta.7",
     "@bodiless/vital-editors": "^1.0.0-beta.7",
     "@bodiless/vital-elements": "^1.0.0-beta.7",
     "@bodiless/vital-flowcontainer": "^1.0.0-beta.7",
