--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -62,6 +62,8 @@
       "@bodiless/richtext/*": ["bodiless-richtext/src/*"],
       "@bodiless/richtext-ui": ["bodiless-richtext-ui/src"],
       "@bodiless/richtext-ui/*": ["bodiless-richtext-ui/src/*"],
+      "@bodiless/schema-org": ["bodiless-schema-org/src"],
+      "@bodiless/schema-org/*": ["bodiless-schema-org/src/*"],
       "@bodiless/search": ["bodiless-search/src"],
       "@bodiless/search/*": ["bodiless-search/src/*"],
       "@bodiless/table": ["bodiless-table/src"],
@@ -88,8 +90,6 @@
       "@bodiless/vital-meta/*": ["vital-meta/src/*"],
       "@bodiless/vital-navigation": ["vital-navigation/src/"],
       "@bodiless/vital-navigation/*": ["vital-navigation/src/*"],
-      "@bodiless/vital-structuredata": ["vital-structuredata/src"],
-      "@bodiless/vital-structuredata/*": ["vital-structuredata/src/*"],
       "@bodiless/vital-templates": ["vital-templates/src/"],
       "@bodiless/vital-templates/*": ["vital-templates/src/*"],
       "@bodiless/vital-youtube": ["vital-youtube/src"],
