--- a/packages/vital-layout/package.json
+++ b/packages/vital-layout/package.json
@@ -42,7 +42,7 @@
     "@bodiless/vital-link": "^1.0.0-beta.7",
     "@bodiless/vital-meta": "^1.0.0-beta.7",
     "@bodiless/vital-navigation": "^1.0.0-beta.7",
-    "@bodiless/vital-structuredata": "^1.0.0-beta.7",
+    "@bodiless/schema-org": "^1.0.0-beta.7",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
     "mobx-react": "^7.2.1",
