Card flow container

--- a/packages/vital-card/package.json
+++ b/packages/vital-card/package.json
@@ -33,6 +33,7 @@
     "@bodiless/components": "^1.0.0-beta.7",
     "@bodiless/components-ui": "^1.0.0-beta.7",
     "@bodiless/fclasses": "^1.0.0-beta.7",
+    "@bodiless/hydration": "^1.0.0-beta.7",
     "@bodiless/vital-editors": "^1.0.0-beta.7",
     "@bodiless/vital-elements": "^1.0.0-beta.7",
     "@bodiless/vital-image": "^1.0.0-beta.7",
