docs(vital-flowcontainer, vital-templates): Update Generic Template and Flow Container docs (#1588)
* Update `package.json` files for Test and Vital sites.
  * "Vital Flow Container" and "Vital Templates" sections were missing from
    documentation.
* Clean up; add images
* Add warning about image width
* Update CX/CanvasX to Vital
* Remove TODO comment
* Update Default Template image and add to Templates page
* Remove Product Detail & Product Listing pages
* Add shadowing example

--- a/sites/__vital__/package.json
+++ b/sites/__vital__/package.json
@@ -24,6 +24,7 @@
     "@bodiless/ui": "^1.0.0-beta.7",
     "@bodiless/vital-editors": "^1.0.0-beta.7",
     "@bodiless/vital-elements": "^1.0.0-beta.7",
+    "@bodiless/vital-flowcontainer": "^1.0.0-beta.7",
     "@bodiless/vital-link": "^1.0.0-beta.7",
     "@bodiless/vital-list": "^1.0.0-beta.7",
     "@bodiless/vital-templates": "^1.0.0-beta.7",
