--- a/packages/vital-meta/package.json
+++ b/packages/vital-meta/package.json
@@ -2,7 +2,7 @@
   "name": "@bodiless/vital-meta",
   "version": "1.0.0-beta.7",
   "description": "Editable SEO and Share Metatags for Bodiless/VitalDS",
-  "author": "Chris Odem <coden@its.jnj.com>",
+  "author": "Chris Oden <coden@its.jnj.com>",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "sideEffects": false,
@@ -16,6 +16,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "build": "run-p build:lib build:api-doc",
