--- a/packages/vital-templates/package.json
+++ b/packages/vital-templates/package.json
@@ -45,6 +45,7 @@
     "@bodiless/vital-image": "^1.0.0-beta.9",
     "@bodiless/vital-layout": "^1.0.0-beta.9",
     "@bodiless/vital-youtube": "^1.0.0-beta.9",
+    "@bodiless/vital-card": "^1.0.0-beta.9",
     "lodash": "^4.17.19"
   }
 }
