--- a/packages/vital-table/package.json
+++ b/packages/vital-table/package.json
@@ -39,6 +39,7 @@
     "@bodiless/core": "^1.0.0-beta.9",
     "@bodiless/fclasses": "^1.0.0-beta.9",
     "@bodiless/hydration": "^1.0.0-beta.9",
+    "@bodiless/layouts": "^1.0.0-beta.9",
     "@bodiless/richtext": "^1.0.0-beta.9",
     "@bodiless/richtext-ui": "^1.0.0-beta.9",
     "@bodiless/table": "^1.0.0-beta.9",
