--- a/sites/vital-storybook/tsconfig.json
+++ b/sites/vital-storybook/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.settings.json",
   "compilerOptions": {
-    "rootDir": "src",
+    "rootDir": "../..",
     "outDir": "lib",
     "moduleResolution": "node",
     "module": "commonjs",
@@ -25,6 +25,6 @@
     "resolveJsonModule": true,
   },
   "include": [
-    "./src/**/*"
+    "src/**/*"
   ]
 }
