--- a/packages/vital-elements/package.json
+++ b/packages/vital-elements/package.json
@@ -35,6 +35,7 @@
     "@bodiless/core": "^1.0.0-beta.7",
     "@bodiless/fclasses": "^1.0.0-beta.7",
     "@bodiless/hydration": "^1.0.0-beta.7",
+    "@bodiless/tokens": "^1.0.0-beta.7",
     "@types/webpack": "^5.0.0",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
