Header story working, but with logo gatsby-image removed.

--- a/packages/vital-layout/package.json
+++ b/packages/vital-layout/package.json
@@ -36,6 +36,7 @@
     "@bodiless/fclasses": "^1.0.0-beta.9",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.9",
     "@bodiless/hydration": "^1.0.0-beta.9",
+    "@bodiless/tokens": "^1.0.0-beta.9",
     "@bodiless/vital-editors": "^1.0.0-beta.9",
     "@bodiless/vital-elements": "^1.0.0-beta.9",
     "@bodiless/vital-image": "^1.0.0-beta.9",
