--- a/sites/vital-storybook/package.json
+++ b/sites/vital-storybook/package.json
@@ -19,6 +19,7 @@
     "@bodiless/core": "^1.0.0-beta.9",
     "@bodiless/vital-editors": "^1.0.0-beta.9",
     "@bodiless/vital-elements": "^1.0.0-beta.9",
+    "@bodiless/vital-layout": "^1.0.0-beta.9",
     "@bodiless/vital-link": "^1.0.0-beta.9",
     "@bodiless/vital-templates": "^1.0.0-beta.9",
     "@bodiless/documentation": "^1.0.0-beta.9",
@@ -84,7 +85,7 @@
     "search-index": "create-search-index",
     "serve": "gatsby serve",
     "start": "run-p -r dev-frontend dev-backend",
-    "storybook": "start-storybook -p 6006"
+    "storybook": "start-storybook -p 6006 --docs"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
