--- a/lerna.json
+++ b/lerna.json
@@ -6,8 +6,10 @@
   "lerna": "2.0.0",
   "command": {
     "publish": {
-      "allowBranch": "release",
       "message": "chore(release): publish %s"
+    },
+    "version": {
+      "allowBranch": "main"
     }
   },
   "version": "1.0.0-beta.5"
