--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -24,6 +24,7 @@
     "@bodiless/ui": "^1.0.0-beta.9",
     "@bodiless/vital-editors": "^1.0.0-beta.9",
     "@bodiless/vital-elements": "^1.0.0-beta.9",
+    "@bodiless/vital-layout": "^1.0.0-beta.9",
     "@bodiless/vital-link": "^1.0.0-beta.9",
     "@bodiless/vital-templates": "^1.0.0-beta.9",
     "@bodiless/webpack": "^1.0.0-beta.9",
@@ -62,6 +63,7 @@
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
     "build:search": "create-search-index",
     "build:stats": "BODILESS_BUILD_STATS=1 npm run build",
+    "build:sb": "build-storybook --docs",
     "check": "tsc -p ./tsconfig.check.json",
     "clean": "gatsby clean",
     "dev-backend": "bodiless-backend",
@@ -69,11 +71,21 @@
     "prepare": "node ../../scripts/set-missing-symlinks.js @bodiless",
     "prestart": "run-s build:env-vars build:doc",
     "serve": "gatsby serve",
+    "serve:sb": "npx -y http-server ./storybook-static",
     "serve:docs": "docsify serve ./doc",
-    "start": "run-p -r dev-frontend dev-backend"
+    "start": "run-p -r dev-frontend dev-backend",
+    "start:sb": "start-storybook -p 6006 --docs"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@bodiless/tokens": "^1.0.0-beta.9",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/addon-postcss": "2.0.0",
+    "@storybook/builder-webpack5": "^6.3.12",
+    "@storybook/manager-webpack5": "^6.3.12",
+    "@storybook/react": "^6.3.12",
     "copyfiles": "^2.1.1",
     "cross-env": "^5.2.0",
     "gatsby-plugin-compile-es6-packages": "^1.1.0",
