Finish custom data store doc and refactor sb store.

--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -74,7 +74,7 @@
     "serve:sb": "npx -y http-server ./storybook-static",
     "serve:docs": "docsify serve ./doc",
     "start": "run-p -r dev-frontend dev-backend",
-    "start:sb": "start-storybook -p 6006 --docs"
+    "storybook": "start-storybook -p 6006 --docs"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
