--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -69,7 +69,7 @@
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
     "build:search": "create-search-index",
     "build:stats": "BODILESS_BUILD_STATS=1 npm run build",
-    "build:sb": "build-storybook --docs",
+    "build:storybook": "build-storybook --docs",
     "check": "tsc -p ./tsconfig.check.json",
     "clean": "gatsby clean",
     "dev-backend": "bodiless-backend",
@@ -77,7 +77,7 @@
     "prepare": "node ../../scripts/set-missing-symlinks.js @bodiless",
     "prestart": "run-s build:env-vars build:doc",
     "serve": "gatsby serve",
-    "serve:sb": "npx -y http-server ./storybook-static",
+    "serve:storybook": "npx -y http-server ./storybook-static",
     "serve:docs": "docsify serve ./doc",
     "start": "run-p -r dev-frontend dev-backend",
     "storybook": "start-storybook -p 6006 --docs"
