--- a/packages/bodiless-tokens/package.json
+++ b/packages/bodiless-tokens/package.json
@@ -33,6 +33,7 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
+    "@bodiless/cli": "^1.0.0-beta.9",
     "@bodiless/core": "^1.0.0-beta.9",
     "@bodiless/core-ui": "^1.0.0-beta.9",
     "@bodiless/fclasses": "^1.0.0-beta.9",
