--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -21,6 +21,7 @@
     "@bodiless/fclasses": "^1.0.0-beta.9",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.9",
     "@bodiless/search": "^1.0.0-beta.9",
+    "@bodiless/tokens": "^1.0.0-beta.9",
     "@bodiless/ui": "^1.0.0-beta.9",
     "@bodiless/vital-editors": "^1.0.0-beta.9",
     "@bodiless/vital-elements": "^1.0.0-beta.9",
@@ -78,13 +79,12 @@
     "prestart": "run-s build:env-vars build:doc",
     "serve": "gatsby serve",
     "serve:storybook": "npx -y http-server ./storybook-static",
-    "serve:docs": "docsify serve ./doc",
+    "serve:doc": "docsify serve ./doc",
     "start": "run-p -r dev-frontend dev-backend",
     "storybook": "start-storybook -p 6006 --docs"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
-    "@bodiless/tokens": "^1.0.0-beta.9",
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
