Normalize docs sripts across sites.

--- a/sites/__vital__/package.json
+++ b/sites/__vital__/package.json
@@ -61,7 +61,7 @@
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "scripts": {
-    "build": "npm-run-all build:env-vars build:lib build:docs build:search",
+    "build": "npm-run-all build:env-vars build:lib build:search",
     "build:docs": "bl-docs-build",
     "build:env-vars": "bodiless generate-env-vars",
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
@@ -73,7 +73,7 @@
     "dev-frontend": "gatsby develop",
     "docs": "run-s build:docs serve:docs",
     "prepare": "node ../../scripts/set-missing-symlinks.js @bodiless",
-    "prestart": "run-s build:env-vars build:doc",
+    "prestart": "run-s build:env-vars build:docs",
     "search-index": "create-search-index",
     "serve": "gatsby serve",
     "serve:docs": "docsify serve ./doc",
