--- a/packages/bodiless-layouts-ui/package.json
+++ b/packages/bodiless-layouts-ui/package.json
@@ -9,7 +9,8 @@
   "typings": "lib/index.d.ts",
   "files": [
     "/lib",
-    "/doc"
+    "/doc",
+    "tailwind.config.js"
   ],
   "repository": {
     "type": "git",
