--- a/lerna.json
+++ b/lerna.json
@@ -9,7 +9,7 @@
       "message": "chore(release): publish %s"
     },
     "version": {
-      "allowBranch": "release"
+      "allowBranch": ["main", "release"]
     }
   },
   "version": "1.0.0-beta.10"
