chore(release): publish v1.0.0-beta.11

--- a/lerna.json
+++ b/lerna.json
@@ -9,8 +9,11 @@
       "message": "chore(release): publish %s"
     },
     "version": {
-      "allowBranch": ["main", "release"]
+      "allowBranch": [
+        "main",
+        "release"
+      ]
     }
   },
-  "version": "1.0.0-beta.10"
+  "version": "1.0.0-beta.11"
 }
