Remove some things from root package lock and add gatsby-cloud plugin

--- a/packages/bodiless-ui/package.json
+++ b/packages/bodiless-ui/package.json
@@ -44,7 +44,8 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.0.23",
-    "tailwindcss-dir": "^4.0.0"
+    "tailwindcss-dir": "^4.0.0",
+    "postcss-cli": "9.1.0"
   },
   "peerDependencies": {
     "rc-tooltip": "^5.1.1",
