--- a/sites/__minimal__/package.json
+++ b/sites/__minimal__/package.json
@@ -28,6 +28,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "gatsby": "^4.11.2",
+    "gatsby-plugin-gatsby-cloud": "4.13.0",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -43,7 +44,7 @@
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "scripts": {
-    "build": "npm-run-all build:env-vars build:lib build:doc",
+    "build": "gatsby build",
     "build:doc": "bl-docs-build",
     "build:env-vars": "bodiless generate-env-vars",
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
@@ -53,12 +54,13 @@
     "dev-backend": "bodiless-backend",
     "dev-frontend": "gatsby develop",
     "prepare": "node ../../scripts/set-missing-symlinks.js @bodiless",
-    "prestart": "run-s build:env-vars build:doc",
+    "prestart": "build:doc",
     "serve": "gatsby serve",
     "serve:docs": "docsify serve ./doc",
     "start": "run-p -r dev-frontend dev-backend"
   },
   "devDependencies": {
+    "@statoscope/webpack-plugin": "^5.20.1",
     "cross-env": "^5.2.0",
     "npm-run-all": "^4.1.5",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
