--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -72,6 +72,7 @@
     "fs-extra": "^8.1.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-emotion": "^7.10.0",
+    "gatsby-plugin-env-variables": "^2.2.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.10.1",
     "gatsby-plugin-manifest": "^4.10.2",
