--- a/packages/vital-templates/package.json
+++ b/packages/vital-templates/package.json
@@ -39,12 +39,13 @@
     "@bodiless/core": "^1.0.0-beta.12",
     "@bodiless/fclasses": "^1.0.0-beta.12",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.12",
-    "@bodiless/vital-card": "^1.0.0-beta.11",
+    "@bodiless/vital-card": "^1.0.0-beta.12",
     "@bodiless/vital-editors": "^1.0.0-beta.12",
     "@bodiless/vital-elements": "^1.0.0-beta.12",
     "@bodiless/vital-flowcontainer": "^1.0.0-beta.12",
     "@bodiless/vital-image": "^1.0.0-beta.12",
     "@bodiless/vital-layout": "^1.0.0-beta.12",
+    "@bodiless/vital-youtube": "^1.0.0-beta.12",
     "lodash": "^4.17.19"
   }
 }
