Add static code to vital-youtube

--- a/packages/vital-youtube/package.json
+++ b/packages/vital-youtube/package.json
@@ -30,6 +30,7 @@
     "@bodiless/vital-editors": "^1.0.0-beta.12",
     "@bodiless/vital-elements": "^1.0.0-beta.12",
     "@bodiless/fclasses": "^1.0.0-beta.12",
+    "@bodiless/hydration": "^1.0.0-beta.12",
     "@bodiless/organisms": "^1.0.0-beta.12",
     "@bodiless/schema-org": "^1.0.0-beta.12",
     "@bodiless/youtube": "^1.0.0-beta.12",
