docs(vital-table): add doc & example (#1676)
* docs(vital-table): add doc & example

* fix(vital-table): fix export & update doc.

* Minor cleanup

* Add `vital-table` package to Test and Vital sites

- Add `@bodiless/vital-table` to `test-site` and `__vital__` site
  `package.json` files, to generate docs.

* Rename main doc to README

* Open GitHub link in new tab

* Tweak opening paragraph

Co-authored-by: mister. jones <misterjones@users.noreply.github.com>

--- a/sites/__vital__/package.json
+++ b/sites/__vital__/package.json
@@ -30,6 +30,7 @@
     "@bodiless/vital-link": "^1.0.0-beta.12",
     "@bodiless/vital-list": "^1.0.0-beta.12",
     "@bodiless/vital-navigation": "^1.0.0-beta.12",
+    "@bodiless/vital-table": "^1.0.0-beta.12",
     "@bodiless/vital-templates": "^1.0.0-beta.12",
     "@bodiless/webpack": "^1.0.0-beta.12",
     "autoprefixer": "^10.4.2",
