--- a/packages/__vital__/package.json
+++ b/packages/__vital__/package.json
@@ -46,6 +46,7 @@
     "@bodiless/vital-layout": "^1.0.0-beta.12",
     "@bodiless/vital-link": "^1.0.0-beta.12",
     "@bodiless/vital-list": "^1.0.0-beta.12",
+    "@bodiless/vital-meta": "^1.0.0-beta.12",
     "@bodiless/vital-table": "^1.0.0-beta.12",
     "@bodiless/vital-templates": "^1.0.0-beta.12",
     "lodash": "^4.17.19",
