Add rest of components

--- a/packages/__vital__/package.json
+++ b/packages/__vital__/package.json
@@ -47,6 +47,8 @@
     "@bodiless/vital-layout": "^1.0.0-beta.14",
     "@bodiless/vital-link": "^1.0.0-beta.14",
     "@bodiless/vital-list": "^1.0.0-beta.14",
+    "@bodiless/vital-meta": "^1.0.0-beta.14",
+    "@bodiless/vital-navigation": "^1.0.0-beta.14",    
     "@bodiless/vital-table": "^1.0.0-beta.14",
     "@bodiless/vital-templates": "^1.0.0-beta.14",
     "@bodiless/vital-youtube": "^1.0.0-beta.12",
