--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -43,7 +43,7 @@
     "build": "run-p copy build:lib",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
-    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api ./src",
+    "build:api-doc": "typedoc --out doc/api ./src",
     "clean": "rimraf -rf \"dist\" && rimraf index* && rimraf \"doc/api\"",
     "copy": "copyfiles -u 1 \"./src/dist/**/*.{json,jpg,png}\" \".\""
   },
