--- a/packages/vital-elements/package.json
+++ b/packages/vital-elements/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "build": "run-p build:lib copy",
-    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api src",
+    "build:api-doc": "typedoc --out doc/api src",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
     "copy": "copyfiles -u 1 \"./src/*.css\" \"./lib/\"",
