--- a/packages/vital-templates/package.json
+++ b/packages/vital-templates/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "build": "run-p build:lib",
-    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api ./src",
+    "build:api-doc": "typedoc --out doc/api ./src",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo"
