--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@babel/plugin-transform-modules-commonjs": "^7.5.0",
     "@babel/runtime": "^7.4.2",
+    "@playwright/test": "^1.20.0",
     "@statoscope/webpack-plugin": "^5.20.1",
     "@types/enzyme": "^3.9.1",
     "@types/jest": "^24.0.18",
