--- a/packages/__vital__/package.json
+++ b/packages/__vital__/package.json
@@ -39,6 +39,7 @@
     "@bodiless/fclasses": "^1.0.0-beta.14",
     "@bodiless/richtext": "^1.0.0-beta.14",
     "@bodiless/richtext-ui": "^1.0.0-beta.14",
+    "@bodiless/vital-card": "^1.0.0-beta.14",
     "@bodiless/vital-editors": "^1.0.0-beta.14",
     "@bodiless/vital-elements": "^1.0.0-beta.14",
     "@bodiless/vital-flowcontainer": "^1.0.0-beta.14",
@@ -50,7 +51,7 @@
     "@bodiless/vital-navigation": "^1.0.0-beta.14",    
     "@bodiless/vital-table": "^1.0.0-beta.14",
     "@bodiless/vital-templates": "^1.0.0-beta.14",
-    "@bodiless/vital-youtube": "^1.0.0-beta.12",
+    "@bodiless/vital-youtube": "^1.0.0-beta.14",
     "lodash": "^4.17.19",
     "tailwindcss": "^3.0.23"
   }
