--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -9,6 +9,7 @@ on:
 jobs:
   prerelease:
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.head_commit.message, 'no-release') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -31,9 +32,10 @@ jobs:
           route: DELETE /repos/${{ github.repository }}/branches/main/protection
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      # In order to disable common version line remove the --force-publish flag in lerna command below
       - name: Prerelease
         run: |
-          npx lerna version --conventional-commits --conventional-prerelease --preid=beta --include-merged-tags --yes
+          npx lerna version --conventional-commits --conventional-prerelease --preid=beta --include-merged-tags --force-publish --yes
       - name: Enable branch protection
         uses: octokit/request-action@v2.x
         with:
