--- a/sites/minimal-demo/package.json
+++ b/sites/minimal-demo/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@sites/minimal-demo",
-  "version": "1.0.0-beta.10",
+  "version": "1.0.0-beta.16",
   "description": "Demo site for a Bodiless site using the __minimal__ starter site",
-  "author": "Chris Oden <coden@its.jnj.com>",
-  "homepage": "",
+  "author": "James Jones <jjone119@its.jnj.com>",
+  "homepage": "https://bodiless-js.org",
   "license": "Apache-2.0",
   "private": true,
   "directories": {
@@ -11,17 +11,17 @@
     "test": "__tests__"
   },
   "dependencies": {
-    "@bodiless/backend": "^1.0.0-beta.10",
-    "@bodiless/cli": "^1.0.0-beta.10",
-    "@bodiless/components": "^1.0.0-beta.10",
-    "@bodiless/components-ui": "^1.0.0-beta.10",
-    "@bodiless/core": "^1.0.0-beta.10",
-    "@bodiless/documentation": "^1.0.0-beta.10",
-    "@bodiless/fclasses": "^1.0.0-beta.10",
-    "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.10",
-    "@bodiless/layouts-ui": "^1.0.0-beta.10",
-    "@bodiless/richtext-ui": "^1.0.0-beta.10",
-    "@bodiless/ui": "^1.0.0-beta.10",
+    "@bodiless/backend": "^1.0.0-beta.16",
+    "@bodiless/cli": "^1.0.0-beta.16",
+    "@bodiless/components": "^1.0.0-beta.16",
+    "@bodiless/components-ui": "^1.0.0-beta.16",
+    "@bodiless/core": "^1.0.0-beta.16",
+    "@bodiless/documentation": "^1.0.0-beta.16",
+    "@bodiless/fclasses": "^1.0.0-beta.16",
+    "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.16",
+    "@bodiless/layouts-ui": "^1.0.0-beta.16",
+    "@bodiless/richtext-ui": "^1.0.0-beta.16",
+    "@bodiless/ui": "^1.0.0-beta.16",
     "autoprefixer": "^10.4.2",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
