--- a/package.json
+++ b/package.json
@@ -74,6 +74,10 @@
     "symlink-dir": "^3.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/plugin-transform-modules-commonjs": "7.5.0",
+    "@babel/runtime": "^7.4.2",
     "@playwright/test": "^1.20.0",
     "@types/enzyme": "^3.9.1",
     "@types/jest": "^24.0.18",
@@ -86,6 +90,8 @@
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.9.0",
     "cross-env": "^5.2.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-xpath": "^1.4.0",
