--- a/packages/bodiless-table/package.json
+++ b/packages/bodiless-table/package.json
@@ -24,7 +24,7 @@
     "build": "run-p build:lib",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
-    "build:api-doc": "typedoc --out doc/api ./src",
+    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api ./src",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
