--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bodiless-js",
   "description": "Bodiless-JS",
-  "version": "1.0.0-beta.15",
+  "version": "1.0.0-rc.1",
   "keywords": [
     "gatsby"
   ],
