--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -41,9 +41,10 @@
     "access": "public"
   },
   "scripts": {
-    "build": "npm run copy && tsc -p ./tsconfig.json && tsc -p ./src/tsconfig.json && npm run build:api-doc",
-    "build:watch": "npm run build -- --watch",
-    "build:api-doc": "typedoc --out doc/api src --tsconfig src/tsconfig.json",
+    "build": "npm run copy && npm run build:lib && npm run build:api-doc",
+    "build:lib": "tsc -p ./tsconfig.json && tsc -p ./src/tsconfig.json",
+    "build:watch": "run-p tsc -p ./tsconfig.json --watch && tsc -p ./src/tsconfig.json --watch",
+    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api --tsconfig src/tsconfig.json ./src",
     "clean": "rimraf -rf \"dist\" && rimraf -rf \"cjs\" && rimraf index* && rimraf \"doc/api\"",
     "copy": "copyfiles -u 1 \"./src/dist/**/*.{json,jpg,png}\" \".\" && copyfiles -u 1 \"./src/dist/**/*.{json,jpg,png}\" \"./cjs\""
   },
