--- a/packages/fclasses/package.json
+++ b/packages/fclasses/package.json
@@ -30,7 +30,7 @@
     "build": "npm run build:lib && npm run build:api-doc",
     "build:lib": "tsc --version && tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
-    "build:api-doc": "typedoc --out doc/api src",
+    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api src",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
@@ -41,5 +41,8 @@
   },
   "peerDependencies": {
     "react": "^17.0.2"
+  },
+  "devDependencies": {
+    "@types/tailwindcss": "^3.0.10"
   }
 }
