feat(playwright): Migration from cypress to playwright (#1487)
* Migration from cypress to playwright

* Migration from cypress to playwright, updated

* Migration from cypress to playwright, updated

* typeText method was removed from pdp.spec.ts

* fix: add container selectors on flow-container page

* Use area-label insead of className

* FlowContainer component: allow id prop

* fixed all PR comments

* AESQ-8348, package-lock.json updated

* AESQ-8348, obsolete files were deleted

* AESQ-2883, viewport removed from all files

* AESQ-8348, obsolete files were deleted

* Preliminary commit

* AESQ-8348, fully reworked tests, 1-1 to cypress

* removed obsolete files

* Files updates to comply with MR comments

* Fixed according to MR

* Fixed according to MR

* Fixed according to MR

* Fixed viewport for chromium

* fixed tests according to PR comments

* preliminary commit

* Updates according to PR comments

* fix: add container selectors on flow-container page

* Use area-label insead of className

* FlowContainer component: allow id prop

* package-lock.json updated with playwright 1.22 version

* package-lock.json updated with playwright 1.22 version

* changed number of commits to 1 in commit history check

* limit number of workers for playwright

* cards.spec.ts was excluded from test suite

* fixed commit history comparison

Co-authored-by: pomi <AQ1sw@DE3fr$GT5>
Co-authored-by: tmiraniuk <tmiraniu@its.jnj.com>
Co-authored-by: Konstantin Mishur <kmishur@its.jnj.com>
Co-authored-by: Heidi Vanyo <58534559+hvanyo@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "bootstrap": "npm run clean:symlinks && npx lerna bootstrap --hoist --strict",
-    "bootstrap:gatsby-cloud": "npm i && npx lerna bootstrap", 
+    "bootstrap:gatsby-cloud": "npm i && npx lerna bootstrap",
     "build": "cross-env NODE_ENV=production lerna run build --stream --ignore @bodiless/gatsby-starter-bodiless",
     "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope",
     "build:packages": "cross-env NODE_ENV=production lerna run build --stream --ignore @sites/*",
@@ -39,7 +39,7 @@
     "publish:major": "lerna version major --conventional-commits",
     "lerna:publish": "lerna publish from-git --yes --dist-tag latest",
     "lerna:canary": "lerna publish --canary --include-merged-tags --preid ks-canary --dist-tag ks-canary --force-publish",
-    "pw:run": "npx playwright test playwright/tests/smoke/* --project=chromium",
+    "pw:run": "npx playwright test playwright/tests/smoke/* --project=chromium --workers 1",
     "serve": "lerna run serve --scope @sites/${APP_SITE_NAME:-test-site} --stream",
     "setup": "npm run bootstrap && npm run build:packages",
     "setup:gatsby-cloud": "npm run bootstrap:gatsby-cloud && npm run build:packages",
@@ -80,7 +80,7 @@
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@babel/plugin-transform-modules-commonjs": "7.5.0",
     "@babel/runtime": "^7.4.2",
-    "@playwright/test": "^1.20.0",
+    "@playwright/test": "1.22",
     "@types/enzyme": "^3.9.1",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.158",
