docs(bodiless-schema-org, vital-card, vital-youtube): Vital Hero (#1792)
* Fix generation/build of documentation.
  * Add `bodiless-schema-org`, `vital-card`, and `vital-youtube`
    packages to Test Site and Vital Demo Site `package.json` files.
  * Add `getDocs.js` files to `bodiless-schema-org`, `vital-card`, and
    `vital-youtube` packages.
  * Update `package.json` files of `bodiless-schema-org`, `vital-card`,
    and `vital-youtube` to include `getDocs.js` and `@bodiless/cli`.
* Update doc structure
* Update `bodiless.docs.json` files.
  * Rename main doc file to `README.md`.
* Update package `README`s.
* Add `assets` folders with images.
* Update docs with Vital Hero info.
  * Update Vital Card, Image, and YouTube documentation with Hero
    details.
  * Clean up Bodiless YouTube Component page.
  * Update Schema page.
* Fix broken links in Vital Demo style guide.
* Break Product and Video Schema sections into pages
  * Break the "Product Schema" and "Video Schema" sections out of the
    main "Schema Component" page, and into their own pages under the
    Schema section.
* Fill out Vital Card page.
  * Add info block about Card height.

Co-authored-by: Heidi Vanyo <58534559+hvanyo@users.noreply.github.com>
Co-authored-by: Dewen Li <dewen.sinocrest@gmail.com>

--- a/packages/vital-card/package.json
+++ b/packages/vital-card/package.json
@@ -11,6 +11,7 @@
     "/lib",
     "/bodiless.docs.json",
     "/doc",
+    "/getDocs.js",
     "tailwind.config.js"
   ],
   "repository": {
@@ -29,6 +30,7 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
+    "@bodiless/cli": "^1.0.0-rc.1",
     "@bodiless/components": "^1.0.0-rc.1",
     "@bodiless/components-ui": "^1.0.0-rc.1",
     "@bodiless/core": "^1.0.0-rc.1",
