--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -20,8 +20,10 @@
     "@bodiless/documentation": "^1.0.0-rc.1",
     "@bodiless/fclasses": "^1.0.0-rc.1",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.1",
+    "@bodiless/schema-org": "^1.0.0-rc.1",
     "@bodiless/search": "^1.0.0-rc.1",
     "@bodiless/ui": "^1.0.0-rc.1",
+    "@bodiless/vital-card": "^1.0.0-rc.1",
     "@bodiless/vital-editors": "^1.0.0-rc.1",
     "@bodiless/vital-elements": "^1.0.0-rc.1",
     "@bodiless/vital-flowcontainer": "^1.0.0-rc.1",
@@ -31,6 +33,7 @@
     "@bodiless/vital-list": "^1.0.0-rc.1",
     "@bodiless/vital-navigation": "^1.0.0-rc.1",
     "@bodiless/vital-templates": "^1.0.0-rc.1",
+    "@bodiless/vital-youtube": "^1.0.0-rc.1",
     "@bodiless/webpack": "^1.0.0-rc.1",
     "autoprefixer": "^10.4.2",
     "docsify-cli": "^4.3.0",
