feat(vital-buttons): Add Buttons (#1781)
* feat(vital-buttons): add buttons


Co-authored-by: Dewen Li <dewen.sinocrest@gmail.com>

--- a/packages/__vital__/package.json
+++ b/packages/__vital__/package.json
@@ -38,6 +38,7 @@
     "@bodiless/fclasses": "^1.0.0-rc.1",
     "@bodiless/richtext": "^1.0.0-rc.1",
     "@bodiless/richtext-ui": "^1.0.0-rc.1",
+    "@bodiless/vital-buttons": "^1.0.0-rc.1",
     "@bodiless/vital-card": "^1.0.0-rc.1",
     "@bodiless/vital-editors": "^1.0.0-rc.1",
     "@bodiless/vital-elements": "^1.0.0-rc.1",
