--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -23,6 +23,7 @@
     "@bodiless/schema-org": "^1.0.0-rc.1",
     "@bodiless/search": "^1.0.0-rc.1",
     "@bodiless/ui": "^1.0.0-rc.1",
+    "@bodiless/vital-buttons": "^1.0.0-rc.1", 
     "@bodiless/vital-card": "^1.0.0-rc.1",
     "@bodiless/vital-editors": "^1.0.0-rc.1",
     "@bodiless/vital-elements": "^1.0.0-rc.1",
