--- a/packages/vital-layout/package.json
+++ b/packages/vital-layout/package.json
@@ -37,6 +37,7 @@
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.1",
     "@bodiless/hydration": "^1.0.0-rc.1",
     "@bodiless/schema-org": "^1.0.0-rc.1",
+    "@bodiless/vital-buttons": "^1.0.0-rc.1",
     "@bodiless/vital-editors": "^1.0.0-rc.1",
     "@bodiless/vital-elements": "^1.0.0-rc.1",
     "@bodiless/vital-image": "^1.0.0-rc.1",
