feat(search): Add @bodiless/vital-search (#1628)
* WIP: add vital-search package

* Fix vital-search dependency versions

* Update vital-search git url

* Update vital-search docs config file

* Add bodiless search reexports into vital search

* Remove vital-layout dependency from vital-search

* Update search box styles

* Add search page to vital-demo

* Update search configuration lookup

* Update vital-search docs

* Update vital-search styles

* Update packages to 1.0.0-beta.12

* Add minor style fixes

* Fix typo in bodiless-search docs

* Add mobile styles to the search component

* Update vital search dependencies

* Move search components into vital-search

* Add copyright message to vital-serch files

* Update vital-search version

* Refactor vital-search component structure

* Update vital-search imports on vital-layout

* Rename SearchResult to SearchResults

* Rename SearchResultItem to SearchResult

* Update SearchLayoutComponents type

* Move search context to a separate layout token

* Update vital-search tokens

* Update Search page template structure

* Remove ResponsiveBreakpoints helper

* Update vital-search to 1.0.0-beta.18

* Update vital-search token exports

* Fix __vital__ site build breaking

* Remove styleguide pages from vital-demo search

* Add H1Link through H5Link typography tokens

* Fix homepage search result not having a title

* Add colored backgrounds to search suggestion rows

* Fix SearchTool test

* Fix broken home page href in search results

* Fix vital-search colors missing on static sites

* Update vital-search to v1.0.0-rc.1

* Add missing search secondary color token

Co-authored-by: Heidi Vanyo <58534559+hvanyo@users.noreply.github.com>

--- a/packages/vital-layout/package.json
+++ b/packages/vital-layout/package.json
@@ -44,6 +44,7 @@
     "@bodiless/vital-link": "^1.0.0-rc.1",
     "@bodiless/vital-meta": "^1.0.0-rc.1",
     "@bodiless/vital-navigation": "^1.0.0-rc.1",
+    "@bodiless/vital-search": "^1.0.0-rc.1",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
     "mobx-react": "^7.2.1",
