--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -21,7 +21,6 @@
     "@bodiless/fclasses": "^1.0.0-rc.1",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.1",
     "@bodiless/schema-org": "^1.0.0-rc.1",
-    "@bodiless/search": "^1.0.0-rc.1",
     "@bodiless/ui": "^1.0.0-rc.1",
     "@bodiless/vital-buttons": "^1.0.0-rc.1", 
     "@bodiless/vital-card": "^1.0.0-rc.1",
@@ -33,6 +32,7 @@
     "@bodiless/vital-link": "^1.0.0-rc.1",
     "@bodiless/vital-list": "^1.0.0-rc.1",
     "@bodiless/vital-navigation": "^1.0.0-rc.1",
+    "@bodiless/vital-search": "^1.0.0-rc.1",
     "@bodiless/vital-templates": "^1.0.0-rc.1",
     "@bodiless/vital-youtube": "^1.0.0-rc.1",
     "@bodiless/webpack": "^1.0.0-rc.1",
