fix(vital-cards): update cards with buttons & misc fixes (#1805)
* Fix set of issues with cards/buttons & other vital design issues.

--- a/packages/vital-card/package.json
+++ b/packages/vital-card/package.json
@@ -36,6 +36,8 @@
     "@bodiless/core": "^1.0.0-rc.1",
     "@bodiless/fclasses": "^1.0.0-rc.1",
     "@bodiless/hydration": "^1.0.0-rc.1",
+    "@bodiless/layouts": "^1.0.0-rc.1",
+    "@bodiless/vital-buttons": "^1.0.0-rc.1",
     "@bodiless/vital-editors": "^1.0.0-rc.1",
     "@bodiless/vital-elements": "^1.0.0-rc.1",
     "@bodiless/vital-image": "^1.0.0-rc.1",
