--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "bootstrap": "npm run clean:symlinks && npx lerna bootstrap --hoist --strict",
-    "bootstrap:gatsby-cloud": "npm i && npx lerna bootstrap",
+    "bootstrap": "npm run clean:symlinks && npx lerna@^5.0.0 bootstrap --hoist --strict",
+    "bootstrap:gatsby-cloud": "npm i && npx lerna@^5.0.0 bootstrap",
     "build": "cross-env NODE_ENV=production lerna run build --stream --ignore @bodiless/gatsby-starter-bodiless",
     "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope",
     "build:packages": "cross-env NODE_ENV=production lerna run build --stream --ignore @sites/*",
@@ -118,7 +118,7 @@
     "jest-haste-map": "^24.5.0",
     "jest-resolve": "^24.5.0",
     "jest-sonar-reporter": "^2.0.0",
-    "lerna": "^4.0.0",
+    "lerna": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "ora": "^4.0.2",
     "react-test-renderer": "^17.0.2",
