feat(vital-accordion): Add vital-accordion package (#1899)
* Add vital-accordion package

Co-authored-by: Lucas Varela <lvarelab@its.jnj.com>

--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -72,6 +72,8 @@
       "@bodiless/tokens/*": ["bodiless-tokens/src/*"],
       "@bodiless/ui": ["bodiless-ui/src"],
       "@bodiless/ui/*": ["bodiless-ui/src/*"],
+      "@bodiless/vital-accordion": ["vital-accordion/src"],
+      "@bodiless/vital-accordion/*": ["vital-accordion/src/*"],
       "@bodiless/vital-content-listing": ["vital-content-listing/src/"],
       "@bodiless/vital-content-listing/*": ["vital-content-listing/src/*"],
       "@bodiless/vital-buttons": ["vital-buttons/src/"],
