--- a/packages/vital-flowcontainer/package.json
+++ b/packages/vital-flowcontainer/package.json
@@ -43,6 +43,7 @@
     "@bodiless/richtext": "^1.0.0-rc.2",
     "@bodiless/richtext-ui": "^1.0.0-rc.2",
     "@bodiless/tokens": "^1.0.0-rc.2",
+    "@bodiless/vital-accordion": "^1.0.0-rc.2",
     "@bodiless/vital-buttons": "^1.0.0-rc.2",
     "@bodiless/vital-card": "^1.0.0-rc.2",
     "@bodiless/vital-editors": "^1.0.0-rc.2",
