update package.json to pick up forced font

--- a/sites/bodiless-demo/package.json
+++ b/sites/bodiless-demo/package.json
@@ -21,6 +21,7 @@
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.2",
     "@bodiless/search": "^1.0.0-rc.2",
     "@bodiless/ui": "^1.0.0-rc.2",
+    "@bodiless/vital-buttons": "^1.0.0-rc.2",
     "@bodiless/vital-editors": "^1.0.0-rc.2",
     "@bodiless/vital-elements": "^1.0.0-rc.2",
     "@bodiless/vital-flowcontainer": "^1.0.0-rc.2",
