--- a/packages/__vital__/package.json
+++ b/packages/__vital__/package.json
@@ -35,6 +35,7 @@
     "@bodiless/core": "^1.0.0-rc.3",
     "@bodiless/fclasses": "^1.0.0-rc.3",
     "@bodiless/i18n": "^1.0.0-rc.3",
+    "@bodiless/vital-card": "^1.0.0-rc.3",    
     "@bodiless/vital-elements": "^1.0.0-rc.3",
     "@bodiless/vital-layout": "^1.0.0-rc.3",
     "@bodiless/vital-link": "^1.0.0-rc.3",
