add examples & extend tutorial

--- a/sites/minimal-demo/package.json
+++ b/sites/minimal-demo/package.json
@@ -11,6 +11,7 @@
     "test": "__tests__"
   },
   "dependencies": {
+    "@bodiless/minimal-demo": "^1.0.0-rc.10",
     "@bodiless/backend": "^1.0.0-rc.10",
     "@bodiless/cli": "^1.0.0-rc.10",
     "@bodiless/components": "^1.0.0-rc.10",
