--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -52,6 +52,8 @@
       "@bodiless/layouts-ui/*": ["bodiless-layouts-ui/src/*"],
       "@bodiless/navigation": ["bodiless-navigation/src"],
       "@bodiless/navigation/*": ["bodiless-navigation/src/*"],
+      "@bodiless/minimal-demo": ["minimal-demo/src"],
+      "@bodiless/minimal-demo/*": ["minimal-demo/src/*"],
       "@bodiless/oidc": ["bodiless-oidc/src"],
       "@bodiless/oidc/*": ["bodiless-oidc/src/*"],
       "@bodiless/organisms": ["bodiless-organisms/src"],
