docs(bodiless-docs): Site Builder Tutorial (#1940)
* Update the Site Build Tutorial

Co-authored-by: mister. jones <misterjones@users.noreply.github.com>

--- a/packages/vital-accordion/package.json
+++ b/packages/vital-accordion/package.json
@@ -10,6 +10,7 @@
   "files": [
     "/lib",
     "/bodiless.docs.json",
+    "/getDocs.js",
     "/tailwind.config.js",
     "/doc"
   ],
@@ -29,6 +30,7 @@
     "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx ./src"
   },
   "dependencies": {
+    "@bodiless/cli": "^1.0.0-rc.13",
     "@bodiless/components": "^1.0.0-rc.13",
     "@bodiless/core": "^1.0.0-rc.13",
     "@bodiless/fclasses": "^1.0.0-rc.13",
