--- a/packages/vital-search/package.json
+++ b/packages/vital-search/package.json
@@ -13,6 +13,7 @@
   "files": [
     "/lib",
     "/bodiless.docs.json",
+    "/getDocs.js",    
     "/tailwind.config.js",
     "/doc"
   ],
@@ -35,6 +36,7 @@
     "react": "^17.0.2"
   },
   "dependencies": {
+    "@bodiless/cli": "^1.0.0-rc.13",
     "@bodiless/core": "^1.0.0-rc.13",
     "@bodiless/fclasses": "^1.0.0-rc.13",
     "@bodiless/ga4": "^1.0.0-rc.13",
