--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -41,11 +41,13 @@
       "@bodiless/core-ui": ["bodiless-core-ui/src"],
       "@bodiless/core-ui/*": ["bodiless-core-ui/src/*"],
       "@bodiless/curator/": ["bodiless-curator/src/"],
-      "@bodiless/curator/*": ["bodiless-curator/src/*"], 
+      "@bodiless/curator/*": ["bodiless-curator/src/*"],
       "@bodiless/filtering": ["bodiless-filtering/src"],
       "@bodiless/filtering/*": ["bodiless-filtering/src/*"],
       "@bodiless/hydration": ["bodiless-hydration/src"],
       "@bodiless/hydration/*": ["bodiless-hydration/src/*"],
+      "@bodiless/knapsack-renderer": ["knapsack-renderer/src"],
+      "@bodiless/knapsack-renderer/*": ["knapsack-renderer/src/*"],
       "@bodiless/layouts": ["bodiless-layouts/src"],
       "@bodiless/layouts/*": ["bodiless-layouts/src/*"],
       "@bodiless/layouts-ui": ["bodiless-layouts-ui/src"],
@@ -77,7 +79,7 @@
       "@bodiless/vital-content-listing": ["vital-content-listing/src/"],
       "@bodiless/vital-content-listing/*": ["vital-content-listing/src/*"],
       "@bodiless/vital-buttons": ["vital-buttons/src/"],
-      "@bodiless/vital-buttons/*": ["vital-buttons/src/*"],      
+      "@bodiless/vital-buttons/*": ["vital-buttons/src/*"],
       "@bodiless/vital-editors": ["vital-editors/src/"],
       "@bodiless/vital-editors/*": ["vital-editors/src/*"],
       "@bodiless/vital-elements": ["vital-elements/src/"],
@@ -99,13 +101,13 @@
       "@bodiless/vital-search": ["vital-search/src"],
       "@bodiless/vital-search/*": ["vital-search/src/*"],
       "@bodiless/vital-table": ["vital-table/src/"],
-      "@bodiless/vital-table/*": ["vital-table/src/*"],        
+      "@bodiless/vital-table/*": ["vital-table/src/*"],
       "@bodiless/vital-templates": ["vital-templates/src/"],
       "@bodiless/vital-templates/*": ["vital-templates/src/*"],
       "@bodiless/vital-test": ["vital-test/src/"],
-      "@bodiless/vital-test/*": ["vital-test/src/*"],      
+      "@bodiless/vital-test/*": ["vital-test/src/*"],
       "@bodiless/vital-youtube": ["vital-youtube/src"],
-      "@bodiless/vital-youtube/*": ["vital-youtube/src/*"],  
+      "@bodiless/vital-youtube/*": ["vital-youtube/src/*"],
       "@bodiless/vital-card": ["vital-card/src/"],
       "@bodiless/vital-card/*": ["vital-card/src/*"],
       "@bodiless/youtube": ["bodiless-youtube/src"],
