--- a/packages/knapsack-renderer/package.json
+++ b/packages/knapsack-renderer/package.json
@@ -17,7 +17,7 @@
     "build": "tsc",
     "start": "npm run build -- --watch",
     "clean": "rm -rf ./dist",
-    "lint": "eslint ./",
+    "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx ./src",
     "test": "ava"
   },
   "dependencies": {
@@ -35,7 +35,6 @@
   },
   "devDependencies": {
     "@bodiless/fclasses": "^1.0.0-rc.25",
-    "@knapsack/eslint-config-starter": "^3.47.0",
     "@knapsack/prettier-config": "^3.47.0",
     "@knapsack/test-ava": "^3.47.0",
     "@knapsack/typescript-config-starter": "^3.47.0",
@@ -44,7 +43,6 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "ava": "^3.15.0",
-    "eslint": "^7.27.0",
     "ts-expect": "^1.3.0",
     "typescript": "^4.0.0"
   },
